[package]
name = "growth-program"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.50.0"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.50.0"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.router]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "2c5a2d9"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4.1"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.0"

[dev-dependencies.multiversx-sc-modules]
version = "=0.50.0"

[dev-dependencies.pair-mock]
path = "../pair-mock"

[dev-dependencies.router-mock]
path = "../router-mock"
