[package]
name = "metabonding"
version = "0.0.0"
authors = ["Dorin Marian Iancu, dorin.iancu@multiversx.com"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.50.4"

[dependencies.multiversx-sc-modules]
version = "=0.50.4"

[dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "0485c83"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4.1"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.4"
