[package]
name = "pair-mock"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/pair.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"
