[package]
name = "metabonding-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Dorin Marian Iancu, dorin.iancu@elrond.com" ]

[dev-dependencies]

[dependencies.metabonding]
path = ".."

[dependencies.elrond-wasm]
version = "=0.36.1"

[dependencies.elrond-wasm-debug]
version = "=0.36.1"
